# image_view

./: .gitignore  CMakeLists.txt
installer/config/: config.xml.in
src/: image_view.cpp  image_view.h  image_view.ui  image_view_exports.h  main.cpp  qt_resources.qrc
